--- a/env.yml
+++ b/env.yml
@@ -1,8 +1,7 @@
-name: bnd
+name: bnd-test
 dependencies:
   - pip
-  - python
+  - python=3.10
   - typer
   - pip:
-      - kilosort
       - -e ./
