added pycontrol nwb conversion

--- a/processing_env.yml
+++ b/processing_env.yml
@@ -14,7 +14,9 @@ dependencies:
   - numpy
   - pandas
   - scipy
+  - spikeinterface
   - pip:
       - kilosort
       - ndx_pose
+      - neuroconv
       - -e ./
