Update neuroconv version (#31)
* set neuroconv version

* remove folder bar

--- a/processing_env.yml
+++ b/processing_env.yml
@@ -16,5 +16,5 @@ dependencies:
   - spikeinterface
   - pip:
       - ndx_pose
-      - neuroconv
-      - -e ./
+      - neuroconv~=0.6.0
+      - -e .
